- Fix : Tree window 
	* abort refreshing before closing the window
	* after a search with Tree window opened for current base, don't load automatically the first game in filter, or the Tree will be refreshed, overwriting the filter
- updated spanish translation (thanks to Benigno Hernández)
- updated swedish translation (thanks to Hans Eriksson)
- Fix : finder (Unix systems) : backup of PGN files with upper case extension

[October 2009 ]

scid-3.6.27
-----------
- Fix : Game annotation, annotating all moves : when the next move was the expected one (calculated by the engine), no annotation was added, which was not coherent with "annotate all moves"
- Reworked board setup dialog (thanks to Steven Atkinson)
- Sound:
  * Add "alert" sound from the CE to the PC version as well. Use
    ::utils::sound::PlaySound "sound_alert"
  * wav-file added to the package
- Correspondence Chess
  * Adopt button alignement
- Tools Menu
  * Remove Novag entry
  * Add "Connect Hardware" 
  * Add "Connect Hardware / Configure" usable for Novag & Input Engine
  * Add "Connect Hardware / Input Engine"
  * Add "Connect Hardware / Novag Citrine"
  * Make hardware connect buttons visibility configurable 
    (remove it needs restart)
- Novag Citrine
  * Remove own config (replaced by unified dialogue)
  * Use unified "Connect Hardware" dialoge and parameters thereof
  * Use "hardware connect" button
  * Set button images according to current state
- Input Engine Support:
  * Rework of GUI
  * Handle "illegal moves" (warn user, ignore them)
  * Add "rotate board"
  * Add Synchronise button
  * Add Miniboard to the console
  * Add NLS
  * Colour various states in move area
- Docs
  * Update Novag part (as far as possible)
  * Add "Connect Hardware" with subtopics to english help
  * Add "Input Engine" including some remarks about DGT
- NLS
  * Add tags for all hardware connection dialogues
  * German translation for the tags added